--- a/index.html
+++ b/index.html
@@ -1,80 +1,71 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>衣服尺寸推薦系統</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>服裝尺寸推薦</title>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm"></script>
   <style>
-    body { font-family: Arial, sans-serif; background: #f9f9f9; }
-    .container { max-width: 400px; margin: 2rem auto; padding: 2rem; background: #fff; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);}
-    h1 { font-size: clamp(1.5rem, 4vw, 2.2rem); text-align: center; margin-bottom: 1.5rem;}
-    label { display: block; margin: 1rem 0 0.5rem;}
-    input, select { width: 100%; padding: 0.5rem; margin-bottom: 1rem; border: 1px solid #ccc; border-radius: 6px; font-size: 1rem; box-sizing: border-box;}
-    button { width: 100%; padding: 0.7rem; background: #007bff; color: #fff; border: none; border-radius: 6px; font-size: 1.1rem; cursor: pointer;}
-    button:hover { background: #0056b3;}
-    .result { margin-top: 1.5rem; padding: 1rem; background: #e6ffe6; border-radius: 6px; color: #006400; font-weight: bold; text-align: center; font-size: 1.1rem;}
-    @media (max-width: 600px) { .container { padding: 1rem; } h1 { font-size: 1.3rem; } }
+    body { font-family: sans-serif; max-width: 400px; margin: 2em auto; }
+    input, button { display: block; margin: 1em 0; width: 100%; padding: 0.5em; }
+    .msg { margin-top: 1em; color: green; }
+    .error { color: red; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>衣服尺寸推薦系統</h1>
-    <form id="sizeForm">
-      <label for="height">身高（cm）</label>
-      <input type="number" id="height" required min="100" max="220">
+  <h1>服裝尺寸推薦</h1>
+  <form id="size-form">
+    <input type="number" id="height" placeholder="身高 (cm)" required />
+    <input type="number" id="weight" placeholder="體重 (kg)" required />
+    <input type="url" id="url" placeholder="服裝連結" required />
+    <button type="submit">送出</button>
+  </form>
+  <div id="result" class="msg"></div>
 
-      <label for="weight">體重（kg）</label>
-      <input type="number" id="weight" required min="30" max="200">
+  <script type="module">
+    // 請將下方的 supabaseUrl 和 supabaseKey 換成你自己的專案資訊
+    const supabaseUrl = 'https://YOUR_PROJECT_ID.supabase.co';
+    const supabaseKey = 'YOUR_PUBLIC_ANON_KEY';
+    const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
-      <label for="gender">性別</label>
-      <select id="gender" required>
-        <option value="不限">不限</option>
-        <option value="男">男</option>
-        <option value="女">女</option>
-      </select>
-
-      <label for="waist">腰圍（cm，選填）</label>
-      <input type="number" id="waist" min="40" max="200" placeholder="可不填">
-
-      <label for="chest">胸圍（cm，選填）</label>
-      <input type="number" id="chest" min="40" max="200" placeholder="可不填">
-
-      <label for="link">衣服連結</label>
-      <input type="url" id="link" required placeholder="請貼上衣服商品頁連結">
-
-      <button type="submit">推薦尺寸</button>
-    </form>
-    <div id="result" class="result" style="display:none;"></div>
-  </div>
-
-  <script>
-    function recommendSize(height, weight, gender, waist, chest) {
-      // 基本規則，可依需求擴充
-      if (waist && chest) {
-        if (waist < 70 || chest < 80) return "S";
-        if (waist < 80 || chest < 90) return "M";
-        if (waist < 90 || chest < 100) return "L";
-        return "XL";
-      }
-      if (height < 160 || weight < 50) return "S";
-      if (height < 170 || weight < 65) return "M";
-      if (height < 180 || weight < 80) return "L";
-      return "XL";
+    function recommendSize(height, weight) {
+      if (height < 165 || weight < 55) return "S";
+      if (height > 175 || weight > 75) return "L";
+      return "M";
     }
 
-    document.getElementById('sizeForm').addEventListener('submit', function(e) {
-      e.preventDefault();
-      const height = parseInt(document.getElementById('height').value, 10);
-      const weight = parseInt(document.getElementById('weight').value, 10);
-      const gender = document.getElementById('gender').value;
-      const waist = document.getElementById('waist').value ? parseInt(document.getElementById('waist').value, 10) : null;
-      const chest = document.getElementById('chest').value ? parseInt(document.getElementById('chest').value, 10) : null;
-      const link = document.getElementById('link').value;
+    function validateUrl(url) {
+      return /(clothes|fashion|shop|wear|apparel)/i.test(url);
+    }
 
-      const size = recommendSize(height, weight, gender, waist, chest);
-      document.getElementById('result').style.display = 'block';
-      document.getElementById('result').textContent =
-        `性別：${gender}，推薦尺寸：${size}（僅供參考，建議參考商品頁尺寸表）`;
+    document.getElementById('size-form').addEventListener('submit', async function(e) {
+      e.preventDefault();
+      const height = Number(document.getElementById('height').value);
+      const weight = Number(document.getElementById('weight').value);
+      const url = document.getElementById('url').value.trim();
+      const resultDiv = document.getElementById('result');
+      resultDiv.className = "msg";
+
+      if (!validateUrl(url)) {
+        resultDiv.textContent = "請貼上有效的服裝連結";
+        resultDiv.className = "msg error";
+        return;
+      }
+
+      const recommendedSize = recommendSize(height, weight);
+
+      // 寫入 Supabase
+      const { error } = await supabase
+        .from('userInputs')
+        .insert([{ height, weight, url, recommendedSize }]);
+
+      if (error) {
+        resultDiv.textContent = "資料送出失敗，請稍後再試";
+        resultDiv.className = "msg error";
+      } else {
+        resultDiv.textContent = `資料已送出！推薦尺寸：${recommendedSize}`;
+        document.getElementById('size-form').reset();
+      }
     });
   </script>
 </body>
