--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
   <script type="module">
     // 請將下方的 supabaseUrl 和 supabaseKey 換成你自己的專案資訊
-    const supabaseUrl = 'https://YOUR_PROJECT_ID.supabase.co';
-    const supabaseKey = 'YOUR_PUBLIC_ANON_KEY';
+    const supabaseUrl = 'https://wjyglwmdymjuzgmubhzl.supabase.co';
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndqeWdsd21keW1qdXpnbXViaHpsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTEwNzg5NTMsImV4cCI6MjA2NjY1NDk1M30.SnQamHhHD8s4VWqoW7DE6fqkBPLn4knM0ohSZYNV5vE';
     const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
     function recommendSize(height, weight) {
