--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </form>
   <div id="result" class="msg"></div>
 
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script type="module">
     // 請將下方的 supabaseUrl 和 supabaseKey 換成你自己的專案資訊
     const supabaseUrl = 'https://wjyglwmdymjuzgmubhzl.supabase.co';
