--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     }
 
     function validateUrl(url) {
-      return /(clothes|fashion|shop|wear|apparel)/i.test(url);
+      return /(clothes|fashion|shop|wear|apparel|product)/i.test(url);
     }
 
     document.getElementById('size-form').addEventListener('submit', async function(e) {
