--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
   <div id="result" class="msg"></div>
 
   <script>
-    const supabaseUrl = 'https://wjyglwmdymjuzgmubhzl.supabase.co';
-    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndqeWdsd21keW1qdXpnbXViaHpsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTEwNzg5NTMsImV4cCI6MjA2NjY1NDk1M30.SnQamHhHD8s4VWqoW7DE6fqkBPLn4knM0ohSZYNV5vE';
-    const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+    import { createClient } from '@supabase/supabase-js'
+
+     const supabaseUrl = 'https://wjyglwmdymjuzgmubhzl.supabase.co'
+     const supabaseKey = process.env.eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndqeWdsd21keW1qdXpnbXViaHpsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTEwNzg5NTMsImV4cCI6MjA2NjY1NDk1M30.SnQamHhHD8s4VWqoW7DE6fqkBPLn4knM0ohSZYNV5vE
+     const supabase = createClient(supabaseUrl, supabaseKey)
 
     function recommendSize(height, weight) {
       if (height < 165 || weight < 55) return "S";
