--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
 
   <script>
-    const SUPABASE_URL = 'https://wjyglwmdymjuzgmubhzl.supabase.co';
+    const SUPABASE_URL = "https://wjyglwmdymjuzgmubhzl.supabase.co";
     const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndqeWdsd21keW1qdXpnbXViaHpsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTEwNzg5NTMsImV4cCI6MjA2NjY1NDk1M30.SnQamHhHD8s4VWqoW7DE6fqkBPLn4knM0ohSZYNV5vE';
     const supabase = createClient(SUPABASE_URL, process.env.SUPABASE_KEY);
 
