--- a/index.html
+++ b/index.html
@@ -39,16 +39,12 @@
     function recommendSize(height, weight) {
       if (height < 165 || weight < 55) return "S";
       if ((height >= 165 && height <= 175) && (weight >= 55 && weight <= 75)) return "M";
-  
-     // L以上尺寸判斷，依體重與身高區間調整
-     if ((height > 175 && height <= 180) || (weight > 75 && weight <= 85)) return "L";
-     if ((height > 180 && height <= 185) || (weight > 85 && weight <= 95)) return "XL";
-     if ((height > 185 && height <= 190) || (weight > 95 && weight <= 105)) return "2XL";
-     if ((height > 190 && height <= 195) || (weight > 105 && weight <= 115)) return "3XL";
-     if (height > 195 || weight > 115) return "4XL";
-
-  // 若不符合以上條件，預設回傳 M
-     return "M";
+      if ((height > 175 && height <= 180) || (weight > 75 && weight <= 85)) return "L";
+      if ((height > 180 && height <= 185) || (weight > 85 && weight <= 95)) return "XL";
+      if ((height > 185 && height <= 190) || (weight > 95 && weight <= 105)) return "2XL";
+      if ((height > 190 && height <= 195) || (weight > 105 && weight <= 115)) return "3XL";
+      if (height > 195 || weight > 115) return "4XL";
+      return "M";
     }
 
     function validateUrl(url) {
@@ -71,7 +67,6 @@
 
       const recommendedSize = recommendSize(height, weight);
 
-      // 寫入 Supabase
       const { error } = await supabase
         .from('userInputs')
         .insert([{ height, weight, url, recommendedSize }]);
@@ -82,11 +77,10 @@
       } else {
         resultDiv.textContent = `資料已送出！推薦尺寸：${recommendedSize}`;
         document.getElementById('size-form').reset();
-        fetchLogs(); // 送出後自動刷新查詢
+        fetchLogs();
       }
     });
 
-    // 查詢所有資料（用 fetch + apikey header）
     async function fetchLogs() {
       const logList = document.getElementById('log-list');
       logList.innerHTML = '<li>查詢中...</li>';
@@ -118,11 +112,9 @@
       }
     }
 
-    // 點擊按鈕查詢
     document.getElementById('fetch-btn').addEventListener('click', fetchLogs);
 
-    // 頁面載入時自動查詢
-    fetchLogs();
+    document.addEventListener('DOMContentLoaded', fetchLogs);
   </script>
 </body>
 </html>
